<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/white">
    <RadioGroup
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:id="@+id/answer_group"
        android:layout_width="match_parent"
        android:layout_height="200dp">
        <RadioButton
            android:id="@+id/answer_A"
            android:layout_weight="1"
            android:paddingTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer_A"
            android:textColor="@color/font_black_4"
            android:textColorHighlight="@color/textColorBlack"/>
        <RadioButton
            android:layout_weight="1"
            android:id="@+id/answer_B"
            android:paddingTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer_B"
            android:textColor="@color/font_black_4"
            android:textColorHighlight="@color/textColorBlack"/>
        <RadioButton
            android:id="@+id/answer_C"
            android:layout_weight="1"
            android:paddingTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer_C"
            android:textColor="@color/font_black_4"
            android:textColorHighlight="@color/textColorBlack"/>
        <RadioButton
            android:id="@+id/answer_D"
            android:layout_weight="1"
            android:paddingTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer_D"
            android:textColor="@color/font_black_4"
            android:textColorHighlight="@color/textColorBlack"/>
    </RadioGroup>
</RelativeLayout>