<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v7.widget.Toolbar
        android:id="@+id/register_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">
        <ImageView
            android:id="@+id/register_back"
            android:layout_width="@dimen/toolbar_content"
            android:layout_height="@dimen/toolbar_content"
            android:layout_margin="@dimen/content_margin_hieght"
            android:src="@drawable/ic_toolbar_back" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/content_margin_hieght"
            android:text= "@string/tv_register"
            style="@style/MyFont.ToolBar"/>

    </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/tv_iphone"
                android:textSize="@dimen/re_title_textsize" />

            <EditText
                android:id="@+id/register_iphone"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/re_margin"
                android:background="@null"
                android:hint="@string/iphone_number"
                android:inputType="phone"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/myfont_content_textsize_small" />

            <ImageView
                android:id="@+id/register_tip1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="1dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/resigter_user_name"
                android:textSize="@dimen/re_title_textsize" />

            <EditText
                android:id="@+id/register_uname"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/re_margin"
                android:background="@null"
                android:hint="@string/resigter_user_name_hint"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/myfont_content_textsize_small" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="1dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/user_card_pwd"
                android:textSize="@dimen/re_title_textsize" />

            <EditText
                android:id="@+id/register_password"

                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/re_margin"
                android:background="@null"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/myfont_content_textsize_small" />

            <ImageView
                android:id="@+id/isvisiable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="1dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">


            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/second_password"
                android:textSize="@dimen/re_title_textsize" />

            <EditText
                android:id="@+id/register_repassword"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/re_margin"
                android:background="@null"
                android:hint="@string/second_password"
                android:inputType="textPassword"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/myfont_content_textsize_small" />

            <ImageView
                android:id="@+id/register_tip2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="1dp"
            android:orientation="horizontal">

            <RadioGroup
                android:id="@+id/register_sex_group"
                android:layout_width="373dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/register_sex_nan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_user_man" />

                <RadioButton
                    android:id="@+id/register_sex_nv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="@string/tv_user_women" />

                <TextView
                    android:id="@+id/register_sex_name"
                    android:paddingLeft="100dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
            </RadioGroup>
        </LinearLayout>
    </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/register_next_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/login_button"
                android:text= "@string/bt_register"
                style="@style/MyFont.Button" />

            <LinearLayout
                android:gravity="center_horizontal"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="注册代表你同意"
                    android:textSize="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="quick服务"
                    android:textColor="@color/colorPrimary"
                    android:textSize="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="和"
                    android:textSize="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="隐私条款"
                    android:textColor="@color/colorPrimary"
                    android:textSize="10dp" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>